--- a/loginstyles.css
+++ b/loginstyles.css
@@ -24,8 +24,7 @@ body {
   }
   
   .logo img {
-    width: 50px;
-    margin-bottom: 20px;
+    width: 150px;
   }
   
   h2 {
@@ -48,7 +47,7 @@ body {
   
   input[type="text"],
   input[type="password"] {
-    width: 100%;
+    width: 320px;
     padding: 10px;
     font-size: 14px;
     border: 1px solid #ccc;
@@ -64,25 +63,27 @@ body {
   
   .password-container {
     position: relative;
+    margin-right: 10px;
   }
   
   .password-container input {
-    padding-right: 40px;
+    padding-right: 10px;
+    margin-right: 10px;
   }
   
   .toggle-password {
     position: absolute;
-    right: 10px;
+    right: 0px;
     top: 50%;
     transform: translateY(-50%);
-    background: none;
+    background: white;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
   }
   
   .btn-primary {
-    width: 100%;
+    width: 340px;
     padding: 10px;
     background: #008cff;
     color: white;
